--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <meta name="description" content="CUKONGBET88 adalah situs paling gacor yang selalu mengupdate link alternatif login terbaru bagi kamu yang sering kena blokir provider. Kami juga sediakan bocoran rtp slot Cukongbet 88 yang terkenal dengan winrate tertinggi hingga membuat kamu gampang menang jp, daftar sekarang dan menangkan jackpotnya.">
 <meta name="keywords" content="cukongbet88, cukongbet88 login, cukongbet88 slot, cukongbet 88">
 <meta property="og:title" content="CUKONGBET88 Situs Link Slot Anti Rungkad Login Terbaru Affiliasi Cukongbet 88">
-<meta property="og:site_name" content="LATOBET88">
+<meta name="google-site-verification" content="KJYQ7q5KYTYs1KrEAKru6WotQJgimW07Nyv42hul-OA" />
+<meta property="og:site_name" content="Cukongbet">
 <meta name="twitter:card" content="product">
 <meta name="twitter:site" content="@bukalapak">
 <meta name="twitter:label1" content="Harga">
