--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="twitter:label2" content="Kondisi">
 <meta property="og:url" content="http://mvideo.vanderplas.com/">
 <link itemprop="mainEntityOfpage" rel="canonical" href="http://mvideo.vanderplas.com/">
-<link rel="amphtml" href="https://menyalah-abangku.pages.dev/amp-cukongbet88/">
+<link rel="amphtml" href="https://menyalah-abangku.pages.dev/amp-cukongebet88/">
 <link rel="alternate" media="only screen and (max-width: 640px)" href="http://mvideo.vanderplas.com/">
 <meta property="google:client_id" content="1077645477673-l06bkk6fuvf3vcblkis6d057ksuh4e39.apps.googleusercontent.com">
 <meta property="facebook:client_id" content="727108917352926"><meta property="fb:admins" content="784705928">
